Views内リンク画像のサイズ調整

--- a/web/themes/custom/sqw3css/sqw3css.libraries.yml
+++ b/web/themes/custom/sqw3css/sqw3css.libraries.yml
@@ -3,6 +3,7 @@ sqw3css-global:
   css:
     theme:
       css/sqw3css-style.css: {}
+      css/local.css: {}
   js:
     js/jquery.matchHeight.js: {}
     js/sqw3css-script.js: {}
