--- a/web/profiles/nyankotsu/config/install/core.entity_form_display.node.shop.default.yml
+++ b/web/profiles/nyankotsu/config/install/core.entity_form_display.node.shop.default.yml
@@ -6,15 +6,19 @@ dependencies:
     - field.field.node.shop.field_image
     - field.field.node.shop.field_master
     - field.field.node.shop.field_openhours
+    - field.field.node.shop.field_phone
     - field.field.node.shop.field_products
     - field.field.node.shop.field_shopname
     - field.field.node.shop.field_shopnumber
     - field.field.node.shop.field_shoptype
+    - field.field.node.shop.field_url
     - image.style.thumbnail
     - node.type.shop
   module:
     - image
+    - link
     - path
+    - telephone
     - text
 id: node.shop.default
 targetEntityType: node
@@ -33,13 +37,13 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   field_image:
     type: image_image
-    weight: 16
+    weight: 18
     region: content
     settings:
       progress_indicator: throbber
@@ -59,6 +63,13 @@ content:
     region: content
     settings:
       size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_phone:
+    type: telephone_default
+    weight: 7
+    region: content
+    settings:
       placeholder: ''
     third_party_settings: {  }
   field_products:
@@ -86,40 +97,48 @@ content:
     third_party_settings: {  }
   field_shoptype:
     type: options_select
-    weight: 7
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_url:
+    type: link_default
+    weight: 8
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 8
+    weight: 10
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 13
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 11
+    weight: 13
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 15
+    weight: 17
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 12
+    weight: 14
     region: content
     settings:
       display_label: true
@@ -134,7 +153,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 9
+    weight: 11
     region: content
     settings:
       match_operator: CONTAINS
@@ -143,7 +162,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 14
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
