composer.lockの削除とcomposer.json修正もれ反映

--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,7 @@
 
         "drupal-scaffold": {
             "locations": {
-                "web-root": "web/"
+                "web-root": "./"
             }
         },
         "installer-types": [
