--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,16 @@
 /.vscode
 /.editorconfig
 /.gitattributes
+/.csslintrc
+/.eslintignore
+/.eslintrc.json
+/.ht.router.php
+/.htaccess
+/INSTALL.txt
+/README.md
+/autoload.php
+/example.gitignore
+/index.php
+/robots.txt
+/update.php
+/web.config
