--- a/web/profiles/nyankotsu/nyankotsu.info.yml
+++ b/web/profiles/nyankotsu/nyankotsu.info.yml
@@ -107,6 +107,7 @@ default_content:
     - 84b09cc2-e20b-4afd-b6aa-3de077de52f4
     - 8ec0010f-a793-4390-b849-ab860d468c55
     - 906013e9-448a-4600-9602-c203e507bae4
+    - 95138d26-e134-4cd3-a2c1-28a136042ba0
     - 963f383a-3ac9-465a-a00b-42f1cf5e0899
     - 999ba8dd-446a-4d77-b207-c99d166d6703
     - 9e1ba033-ff8a-4c26-9622-7a3cc62744e9
@@ -124,6 +125,7 @@ default_content:
     - d4613839-28dd-4596-846d-0f83b9f4fad4
     - e4d77ebb-2065-49d9-a2e5-83f18e90455a
     - e5199f17-250b-4657-a6b4-9dc9e9ff8e57
+    - e7c04a67-8899-424d-988a-4da49372526b
     - ed969a3a-2f66-4858-aecd-15d0d4512049
     - f313bbc6-ab51-4d3f-b22e-f6185f89acda
   node:
@@ -169,11 +171,13 @@ default_content:
     - 253bb1d5-18a8-47cb-902f-81ed7813fd6b
     - 35709a96-2f9b-4f61-985a-5bb3cf32580d
     - 60569a4c-d7a9-4716-bca8-03835746cc2d
+    - 63271a9b-8820-4ebd-8bfc-ab7bf67ad4b3
     - 758807ae-89a3-4010-b91d-8dbb3fbaa8c3
     - 8d95219c-6d69-4c1b-908f-5187df1264ca
     - a7f104d8-6a40-4fcb-9003-68059ffa997f
     - ab5679db-3bd1-4b26-b58e-a21b3164db80
     - c67b8b9f-8ef4-46d0-ab78-bf41c2c8d2ea
+    - f636a1c4-d263-402d-9690-c8accb821104
   menu_link_content:
     - 26a0182c-33e3-4ce8-8286-b6246513704c
     - 80433a91-71d0-4e89-b6dd-28805c76ebcd
