--- a/web/profiles/ch06/config/install/core.entity_view_display.media.image.default.yml
+++ b/web/profiles/ch06/config/install/core.entity_view_display.media.image.default.yml
@@ -3,7 +3,6 @@ status: true
 dependencies:
   config:
     - field.field.media.image.field_media_image
-    - image.style.large
     - media.type.image
   module:
     - image
@@ -17,7 +16,7 @@ content:
     label: visually_hidden
     settings:
       image_link: ''
-      image_style: large
+      image_style: ''
       image_loading:
         attribute: lazy
     third_party_settings: {  }
