--- a/web/profiles/ch05/ch05.info.yml
+++ b/web/profiles/ch05/ch05.info.yml
@@ -1,6 +1,5 @@
-name: 第5章
+name: にゃんコツ：第5章末の状態
 type: profile
-description: '第5章末の状態を再現します。'
 core_version_requirement: ^9 || ^10
 install:
   - automated_cron
