--- a/profiles/ch02/ch02.info.yml
+++ b/profiles/ch02/ch02.info.yml
@@ -1,6 +1,5 @@
-name: 第2章
+name: にゃんコツ：第2章末の状態
 type: profile
-description: '第2章末の状態を再現します。'
 core_version_requirement: ^9 || ^10
 install:
   - automated_cron
