--- a/profiles/ch03/ch03.info.yml
+++ b/profiles/ch03/ch03.info.yml
@@ -1,6 +1,5 @@
-name: 第3章
+name: にゃんコツ：第3章末の状態
 type: profile
-description: '第3章末の状態を再現します。'
 core_version_requirement: ^9 || ^10
 install:
   - automated_cron
