--- a/profiles/ch06/ch06.info.yml
+++ b/profiles/ch06/ch06.info.yml
@@ -1,6 +1,5 @@
-name: 第6章
+name: にゃんコツ：第6章末の状態
 type: profile
-description: '第6章末の状態を再現します。'
 core_version_requirement: ^9 || ^10
 install:
   - automated_cron
