--- a/profiles/ch06/config/install/views.view.shop.yml
+++ b/profiles/ch06/config/install/views.view.shop.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_shopimage
-    - image.style.large
+    - image.style.shop_thumbnail
     - node.type.shop
     - system.menu.main
     - taxonomy.vocabulary.industry
@@ -81,7 +81,7 @@ display:
           type: image
           settings:
             image_link: content
-            image_style: large
+            image_style: shop_thumbnail
             image_loading:
               attribute: lazy
           group_column: ''
