--- a/profiles/nyankotsu/config/install/core.entity_view_display.node.news.teaser.yml
+++ b/profiles/nyankotsu/config/install/core.entity_view_display.node.news.teaser.yml
@@ -30,6 +30,7 @@ content:
     weight: 100
     region: content
 hidden:
+  addtoany: true
   field_from: true
   field_media: true
   field_shops: true
