--- a/profiles/nyankotsu/config/install/core.entity_view_display.node.page.default.yml
+++ b/profiles/nyankotsu/config/install/core.entity_view_display.node.page.default.yml
@@ -17,10 +17,13 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 100
+    weight: 0
     region: content
   links:
-    weight: 101
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
     region: content
 hidden:
+  addtoany: true
   langcode: true
