--- a/profiles/nyankotsu/config/install/core.entity_view_display.node.shop.teaser.yml
+++ b/profiles/nyankotsu/config/install/core.entity_view_display.node.shop.teaser.yml
@@ -33,6 +33,7 @@ content:
     weight: 100
     region: content
 hidden:
+  addtoany: true
   field_category: true
   field_industry: true
   field_openhours: true
