--- a/profiles/nyankotsu/config/install/core.entity_view_display.media.video.media_library.yml
+++ b/profiles/nyankotsu/config/install/core.entity_view_display.media.video.media_library.yml
@@ -25,6 +25,7 @@ content:
     weight: 0
     region: content
 hidden:
+  addtoany: true
   created: true
   field_media_video_file: true
   langcode: true
