--- a/profiles/nyankotsu/config/install/core.entity_view_display.node.shop.default.yml
+++ b/profiles/nyankotsu/config/install/core.entity_view_display.node.shop.default.yml
@@ -12,9 +12,77 @@ dependencies:
     - image.style.shopimage
     - node.type.shop
   module:
+    - field_group
     - image
     - text
     - user
+third_party_settings:
+  field_group:
+    group_photos:
+      children:
+        - field_shopimage
+      label: 写真
+      parent_name: ''
+      region: content
+      weight: 0
+      format_type: html_element
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+    group_shopinfo:
+      children:
+        - field_shopnumber
+        - field_products
+        - field_openhours
+        - field_category
+        - field_industry
+      label: 店舗情報
+      parent_name: ''
+      region: content
+      weight: 3
+      format_type: field_group_table
+      format_settings:
+        label_visibility: '1'
+        desc: ''
+        desc_visibility: '2'
+        first_column: ''
+        second_column: ''
+        empty_label_behavior: '1'
+        empty_field_placeholder: ''
+        id: ''
+        classes: ''
+        show_empty_fields: 0
+        table_row_striping: 0
+        always_show_field_label: 0
+        always_show_field_value: 0
+        hide_table_if_empty: 0
+    group_summary:
+      children:
+        - body
+      label: 概要
+      parent_name: ''
+      region: content
+      weight: 1
+      format_type: html_element
+      format_settings:
+        classes: w3-panel
+        show_empty_fields: false
+        id: ''
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
 id: node.shop.default
 targetEntityType: node
 bundle: shop
@@ -29,11 +97,11 @@ content:
     region: content
   field_category:
     type: string
-    label: inline
+    label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 5
+    weight: 10
     region: content
   field_industry:
     type: entity_reference_label
@@ -41,23 +109,23 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 7
+    weight: 11
     region: content
   field_openhours:
     type: string
-    label: inline
+    label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 4
+    weight: 9
     region: content
   field_products:
     type: string
-    label: inline
+    label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 3
+    weight: 8
     region: content
   field_shopimage:
     type: image
@@ -68,21 +136,22 @@ content:
       image_loading:
         attribute: lazy
     third_party_settings: {  }
-    weight: 0
+    weight: 1
     region: content
   field_shopnumber:
     type: number_integer
-    label: inline
+    label: above
     settings:
       thousand_separator: ''
       prefix_suffix: true
     third_party_settings: {  }
-    weight: 6
+    weight: 7
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 1
+    weight: 4
     region: content
 hidden:
+  addtoany: true
   langcode: true
