--- a/web/profiles/nyankotsu/config/install/block_class.settings.yml
+++ b/web/profiles/nyankotsu/config/install/block_class.settings.yml
@@ -2,7 +2,7 @@ langcode: ja
 maxlength_block_class_field: 255
 field_type: multiple_textfields
 default_case: standard
-block_classes_stored: '{"w3-link-blue":"w3-link-blue"}'
+block_classes_stored: '{"w3-link-blue":"w3-link-blue","w3-right":"w3-right","w3-right-align":"w3-right-align"}'
 enable_attributes: true
 enable_auto_complete: true
 qty_classes_per_block: 10
