--- a/web/profiles/nyankotsu/config/install/core.entity_view_display.node.article.default.yml
+++ b/web/profiles/nyankotsu/config/install/core.entity_view_display.node.article.default.yml
@@ -19,17 +19,12 @@ targetEntityType: node
 bundle: article
 mode: default
 content:
-  addtoany:
-    settings: {  }
-    third_party_settings: {  }
-    weight: 5
-    region: content
   body:
     type: text_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 0
+    weight: 1
     region: content
   comment:
     type: comment_default
@@ -38,7 +33,7 @@ content:
       view_mode: default
       pager_id: 0
     third_party_settings: {  }
-    weight: 110
+    weight: 4
     region: content
   field_image:
     type: image
@@ -49,7 +44,7 @@ content:
       image_loading:
         attribute: lazy
     third_party_settings: {  }
-    weight: -1
+    weight: 0
     region: content
   field_tags:
     type: entity_reference_label
@@ -57,12 +52,13 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 10
+    weight: 2
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 100
+    weight: 3
     region: content
 hidden:
+  addtoany: true
   langcode: true
