--- a/web/profiles/nyankotsu/config/install/core.entity_view_display.node.shop.default.yml
+++ b/web/profiles/nyankotsu/config/install/core.entity_view_display.node.shop.default.yml
@@ -47,7 +47,7 @@ third_party_settings:
       label: 店舗情報
       parent_name: ''
       region: content
-      weight: 3
+      weight: 2
       format_type: field_group_table
       format_settings:
         label_visibility: '1'
@@ -147,11 +147,7 @@ content:
     third_party_settings: {  }
     weight: 7
     region: content
-  links:
-    settings: {  }
-    third_party_settings: {  }
-    weight: 4
-    region: content
 hidden:
   addtoany: true
   langcode: true
+  links: true
