Add some modules for new additional exercises
https://www.drupal.org/project/tmgmt
https://www.drupal.org/project/tmgmt_deepl
https://www.drupal.org/project/diff

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "drupal/d8w3css": "^2.0",
         "drupal/default_content": "^2.0@alpha",
         "drupal/devel": "^5.0",
+        "drupal/diff": "^1.1",
         "drupal/easy_breadcrumb": "^2.0",
         "drupal/editor_advanced_link": "^2.1",
         "drupal/field_group": "^3.4",
@@ -48,6 +49,8 @@
         "drupal/pathauto": "^1.12",
         "drupal/redirect": "^1.9",
         "drupal/schema_metatag": "^2.3",
+        "drupal/tmgmt": "^1.15",
+        "drupal/tmgmt_deepl": "^2.2",
         "drupal/token": "^1.10",
         "drupal/webprofiler": "^10.1",
         "drupal/xmlsitemap": "^1.5",
