--- a/web/profiles/nyankotsu/config/install/node.type.shop.yml
+++ b/web/profiles/nyankotsu/config/install/node.type.shop.yml
@@ -10,8 +10,8 @@ third_party_settings:
     parent: 'main:'
 name: 店舗
 type: shop
-description: ''
-help: ''
+description: null
+help: null
 new_revision: true
 preview_mode: 1
 display_submitted: false
