--- a/web/profiles/nyankotsu/config/install/back_to_top.settings.yml
+++ b/web/profiles/nyankotsu/config/install/back_to_top.settings.yml
@@ -1,8 +1,11 @@
+_core:
+  default_config_hash: 7R2nzg0VqAMz99GshofY6Y8z7iQL-uj4fHc353NAOrg
 langcode: ja
 back_to_top_prevent_on_mobile: false
 back_to_top_prevent_in_admin: false
 back_to_top_prevent_in_front: false
 back_to_top_button_trigger: 100.0
+back_to_top_speed: 1200.0
 back_to_top_button_place: 1
 back_to_top_button_text: 'Back to top'
 back_to_top_button_type: image
